refactor(mixins): 调整BEM mixins，优化命名空间及状态生成
修改了`b`和`when` mixin，使用`config`中的命名空间和分隔符配置，并为状态生成添加`is-`前缀，提升代码一致性和可读性。

--- a/packages/vue-fluent-ui/src/styles/mixins/_bem.scss
+++ b/packages/vue-fluent-ui/src/styles/mixins/_bem.scss
@@ -25,7 +25,7 @@ $E: null !default;
  * }
  */
 @mixin b($block) {
-  $B: $namespace + $namespace-separator + $block !global;
+  $B: config.$namespace + config.$namespace-separator + $block !global;
 
   .#{$B} {
     @content;
@@ -136,13 +136,13 @@ $E: null !default;
  * }
  *
  * // CSS Output (假设 namespace 为 'vf'):
- * .vf-button.vf-disabled {
+ * .vf-button.vf-is-disabled {
  *   cursor: not-allowed;
  * }
  */
 @mixin when($state) {
   @at-root {
-    &.#{config.$namespace+config.$namespace-separator+$state} {
+    &.#{config.$namespace+config.$namespace-separator+'is-'+$state} {
       @content;
     }
   }
